Kube_codes/db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
  labels:
    app: my-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      volumes:
        - name: task-pv-volume
          persistentVolumeClaim:
              claimName: task-pv-claim
      containers:
        - name: my-db
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/db"
              name: task-pv-volume
