Kube_codes/sf_db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-db
spec:
  selector:
    matchLabels:
      app: my-db 
  serviceName: "db-service"
  replicas: 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: my-db 
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: task-pv-volume
          persistentVolumeClaim:
              claimName: task-pv-claim
      containers:
      - name: my-db
        image: mongo
        ports:
        - containerPort: 27017
          name: my-db
        volumeMounts:
        - name: task-pv-volume
          mountPath: /data/db
