Kube_codes/db_serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: my-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32000
  type: NodePort
