Kube_codes/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
spec:
  podSelector:
    matchLabels:
      app: db-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
